--- a/src/main/java/com/urosjarc/headhunt/app.fxml
+++ b/src/main/java/com/urosjarc/headhunt/app.fxml
@@ -32,14 +32,13 @@
             </MenuBar>
          </top>
          <center>
-            <TableView fx:id="resultsTable" editable="true" BorderPane.alignment="CENTER">
+            <TableView fx:id="resultsTable" editable="true" onMousePressed="#showResult" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn fx:id="resultsTableStats" prefWidth="140.00003051757812" text="Stats." />
-                  <TableColumn fx:id="resultsTableImage" prefWidth="139.0" text="Image" />
+                <TableColumn fx:id="resultsStats" prefWidth="140.00003051757812" text="Stats." />
                   <TableColumn fx:id="resultsUsername" prefWidth="189.0" text="Username" />
-                  <TableColumn fx:id="resultsTableLocation" minWidth="5.0" prefWidth="230.0" text="Location" />
-                  <TableColumn fx:id="resultsTableAccount" maxWidth="628.0" minWidth="-1.0" prefWidth="193.0" text="Account" />
-                  <TableColumn fx:id="resultsTableCreated" prefWidth="190.0" text="Created" />
+                  <TableColumn fx:id="resultsLocation" minWidth="5.0" prefWidth="230.0" text="Location" />
+                  <TableColumn fx:id="resultsCreated" prefWidth="190.0" text="Created" />
+                  <TableColumn fx:id="resultsAccount" maxWidth="628.0" minWidth="-1.0" prefWidth="193.0" text="Account" />
               </columns>
             </TableView>
          </center>
