--- a/src/main/java/com/urosjarc/headhunt/modules/loadingDialog/loadingdialog.fxml
+++ b/src/main/java/com/urosjarc/headhunt/modules/loadingDialog/loadingdialog.fxml
@@ -22,6 +22,14 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </ProgressBar>
+            <HBox alignment="TOP_RIGHT" spacing="10.0">
+               <children>
+                  <Button mnemonicParsing="false" fx:id="cancelButton" onAction="#cancel" text="Cancel" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" right="10.0" />
+               </VBox.margin>
+            </HBox>
          </children>
       </VBox>
    </children>
