--- a/src/main/java/com/urosjarc/headhunt/app.fxml
+++ b/src/main/java/com/urosjarc/headhunt/app.fxml
@@ -30,7 +30,11 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                   <items>
-                        <MenuItem mnemonicParsing="false" text="Find" />
+                        <Menu mnemonicParsing="false" text="Find...">
+                          <items>
+                              <MenuItem mnemonicParsing="false" onAction="#findUsers" text="Users" />
+                          </items>
+                        </Menu>
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
