--- a/src/main/java/com/urosjarc/headhunt/app/modules/loadDialog/loaddialog.fxml
+++ b/src/main/java/com/urosjarc/headhunt/app/modules/loadDialog/loaddialog.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="61.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.urosjarc.headhunt.modules.loadDialog.LoadDialogPresenter">
+<AnchorPane prefHeight="61.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.urosjarc.headhunt.app.modules.loadDialog.LoadDialogPresenter">
    <children>
       <VBox layoutX="14.0" layoutY="-24.0" prefHeight="112.0" prefWidth="297.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
