--- a/src/main/java/com/urosjarc/headhunt/preloader/preloader.fxml
+++ b/src/main/java/com/urosjarc/headhunt/preloader/preloader.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="61.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.urosjarc.headhunt.app.modules.loadDialog.LoadDialogPresenter">
+
+<AnchorPane prefHeight="61.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.urosjarc.headhunt.preloader.PreloaderPresenter">
    <children>
-      <VBox layoutX="14.0" layoutY="-24.0" prefHeight="112.0" prefWidth="297.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="14.0" layoutY="-24.0" prefHeight="112.0" prefWidth="297.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="textLabel" text="Loading...">
                <VBox.margin>
@@ -19,15 +23,6 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </ProgressBar>
-            <HBox alignment="TOP_RIGHT" spacing="10.0">
-               <children>
-                  <Button fx:id="okButton" mnemonicParsing="false" onAction="#ok" text="Ok" />
-                  <Button fx:id="exitButton" mnemonicParsing="false" onAction="#exit" text="Exit" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="10.0" right="10.0" />
-               </VBox.margin>
-            </HBox>
          </children>
       </VBox>
    </children>
