--- a/src/main/java/headhunt/wizard/views/license/license.fxml
+++ b/src/main/java/headhunt/wizard/views/license/license.fxml
@@ -4,6 +4,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.wizard.views.intro.IntroPresenter">
    <children>
-      <Label layoutX="241.0" layoutY="213.0" text="path" />
+      <Label layoutX="241.0" layoutY="213.0" text="license" />
    </children>
 </AnchorPane>
