--- a/src/main/java/headhunt/wizard/views/intro/intro.fxml
+++ b/src/main/java/headhunt/wizard/views/intro/intro.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -7,6 +9,24 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.wizard.views.intro.IntroPresenter">
    <children>
-      <Label layoutX="241.0" layoutY="213.0" text="intro" />
+      <HBox layoutX="59.0" layoutY="120.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <AnchorPane>
+               <children>
+                  <ImageView fx:id="setupImage" fitHeight="310.0" fitWidth="200.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="/media/setup.jpg" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <VBox prefHeight="400.0" prefWidth="436.0">
+               <children>
+                  <TextFlow fx:id="header" prefHeight="200.0" prefWidth="200.0" />
+                  <TextFlow fx:id="info" prefHeight="385.0" prefWidth="400.0" />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
