--- a/src/main/java/headhunt/wizard/views/intro/intro.fxml
+++ b/src/main/java/headhunt/wizard/views/intro/intro.fxml
@@ -20,11 +20,39 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <VBox prefHeight="400.0" prefWidth="436.0">
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+            <VBox prefHeight="400.0" prefWidth="436.0" spacing="30.0">
                <children>
-                  <TextFlow fx:id="header" prefHeight="200.0" prefWidth="200.0" />
-                  <TextFlow fx:id="info" prefHeight="385.0" prefWidth="400.0" />
+                  <TextFlow fx:id="header" accessibleRole="TEXT_AREA" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Headhunt Setup Wizard">
+                           <font>
+                              <Font name="System Bold" size="23.0" />
+                           </font>
+                        </Text>
+                     </children></TextFlow>
+                  <TextFlow prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="This wizard will guide you through the installation of Headhunt application." />
+                     </children>
+                  </TextFlow>
+                  <TextFlow prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="It is recommended that you close all other applications before starting Setup. This will make it possible to update relevant system files without having to reboot your computer." />
+                     </children>
+                  </TextFlow>
+                  <TextFlow fx:id="info" prefHeight="385.0" prefWidth="400.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Click Next to continue." />
+                     </children>
+                  </TextFlow>
                </children>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </VBox>
          </children>
       </HBox>
