--- a/src/main/java/headhunt/wizard/wizard.fxml
+++ b/src/main/java/headhunt/wizard/wizard.fxml
@@ -11,9 +11,10 @@
          <children>
             <AnchorPane fx:id="view" prefHeight="401.0" prefWidth="600.0">
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets />
                </VBox.margin>
             </AnchorPane>
+            <Separator prefWidth="200.0" />
             <HBox alignment="CENTER_RIGHT" spacing="5.0" VBox.vgrow="NEVER">
                <children>
                   <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previous" text="Previous" />
@@ -22,7 +23,7 @@
                   <Button fx:id="finishButton" mnemonicParsing="false" onAction="#finish" text="Finish" />
                </children>
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </HBox>
          </children>
