--- a/src/main/java/headhunt/wizard/views/license/license.fxml
+++ b/src/main/java/headhunt/wizard/views/license/license.fxml
@@ -50,12 +50,16 @@
             <VBox prefHeight="363.0" prefWidth="600.0" spacing="10.0">
                <children>
                   <Label text="Press Page Down to see the rest of the agreement." />
-                  <TextArea fx:id="license" editable="false" prefHeight="200.0" prefWidth="200.0" text="">
+                  <TextArea fx:id="license" editable="false" prefHeight="365.0" prefWidth="560.0" text="">
                      <font>
                         <Font size="11.0" />
                      </font>
                   </TextArea>
-                  <Label text="You are now aware of your rights. Click Next to continue." />
+                  <TextFlow prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="If you accept the terms of the agreement, click continue. You must accept the aggreement to use Headhunt application." />
+                     </children>
+                  </TextFlow>
                </children>
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
