--- a/src/main/java/headhunt/wizard/views/path/path.fxml
+++ b/src/main/java/headhunt/wizard/views/path/path.fxml
@@ -64,7 +64,7 @@
                   </Label>
                   <HBox alignment="CENTER_LEFT" prefHeight="13.0" prefWidth="542.0" spacing="10.0">
                      <children>
-                        <TextField fx:id="dirField" prefHeight="26.0" prefWidth="390.0" />
+                        <TextField editable="false" fx:id="dirField" prefHeight="26.0" prefWidth="390.0" />
                         <Button fx:id="browseButton" mnemonicParsing="false" onAction="#browse" text="Browse..." />
                      </children>
                      <padding>
