--- a/src/main/java/headhunt/app/modules/result/result.fxml
+++ b/src/main/java/headhunt/app/modules/result/result.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="391.0" prefWidth="554.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.modules.result.ResultPresenter">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="722.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.modules.result.ResultPresenter">
    <children>
       <VBox prefHeight="400.0" prefWidth="503.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -14,7 +13,7 @@
                <children>
                   <VBox prefHeight="399.0" prefWidth="204.0">
                      <children>
-                        <ImageView fx:id="image" fitHeight="180.0" fitWidth="180.0" pickOnBounds="true">
+                        <ImageView fx:id="image" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true">
                            <image>
                               <Image url="/media/icon.png" />
                            </image>
@@ -58,31 +57,35 @@
                         </GridPane>
                      </children>
                   </VBox>
-                  <VBox prefHeight="399.0" prefWidth="462.0">
+                  <HBox spacing="10.0">
                      <children>
-                        <Label text="Websites:">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </Label>
-                        <ListView fx:id="websites" prefHeight="110.0" prefWidth="344.0" />
-                        <Label text="Activity:">
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <ListView fx:id="activities" prefHeight="169.0" prefWidth="344.0" />
-                        <Label text="Biography:">
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <TextArea fx:id="bio" prefHeight="200.0" prefWidth="200.0" />
+                        <VBox prefHeight="379.0" prefWidth="551.0">
+                           <children>
+                              <Label text="Websites:" />
+                              <ListView fx:id="websites" prefHeight="306.0" prefWidth="242.0" />
+                              <Label text="Activity:">
+                                 <padding>
+                                    <Insets top="10.0" />
+                                 </padding></Label>
+                              <TableView fx:id="activityTable">
+                                <columns>
+                                  <TableColumn fx:id="activityName" prefWidth="142.0" text="Name" />
+                                  <TableColumn fx:id="activityValue" prefWidth="99.0" text="Value" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Biography:" />
+                              <TextArea fx:id="bio" wrapText="true" VBox.vgrow="ALWAYS" />
+                           </children>
+                        </VBox>
                      </children>
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
-                  </VBox>
+                  </HBox>
                </children>
             </HBox>
          </children>
