Adding settings dialog to edit prefs...  Adding LoadingFx.  Adding settings dialog module.  Adding vimeoApi set/get-ers for preferences.

--- a/src/main/java/headhunt/app/app.fxml
+++ b/src/main/java/headhunt/app/app.fxml
@@ -26,6 +26,8 @@
                            </items>
                         </Menu>
                         <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#settings" text="Settings" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
                     <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit" />
                   </items>
                 </Menu>
