Created create/edit submodule for scraper dialog...  Add delete method for ScraperSchema.  Add updateScrapersTable for scrapers table view.  Restructure scraper dialog module.

--- a/src/main/java/headhunt/app/app.fxml
+++ b/src/main/java/headhunt/app/app.fxml
@@ -13,6 +13,11 @@
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
+                        <Menu mnemonicParsing="false" text="New...">
+                          <items>
+                            <MenuItem mnemonicParsing="false" onAction="#newScraper" text="Scraper" />
+                          </items>
+                        </Menu>
                         <Menu mnemonicParsing="false" text="Database">
                            <items>
                             <MenuItem mnemonicParsing="false" onAction="#importDatabase" text="Import..." />
