--- a/src/main/java/headhunt/app/views/results/results.fxml
+++ b/src/main/java/headhunt/app/views/results/results.fxml
@@ -4,17 +4,20 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.views.results.ResultsPresenter">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.views.results.ResultsPresenter">
    <children>
-      <TableView fx:id="resultsTable" editable="true" onMousePressed="#showResult" prefHeight="400.0" prefWidth="1022.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TableView fx:id="resultsTable" onMousePressed="#showResult" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columns>
-            <TableColumn fx:id="resultsRank" prefWidth="93.00003051757812" text="Rank" />
-            <TableColumn fx:id="resultsPoints" prefWidth="149.0" text="Points" />
-            <TableColumn fx:id="resultsUsername" prefWidth="164.0" text="Username" />
-            <TableColumn fx:id="resultsLocation" minWidth="5.0" prefWidth="230.0" text="Location" />
-            <TableColumn fx:id="resultsCreated" prefWidth="190.0" text="Created" />
-            <TableColumn fx:id="resultsAccount" maxWidth="628.0" minWidth="-1.0" prefWidth="193.0" text="Account" />
+            <TableColumn fx:id="resultsRank" editable="false" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Rank" />
+            <TableColumn fx:id="resultsPoints" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Points" />
+            <TableColumn fx:id="resultsUsername" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Username" />
+            <TableColumn fx:id="resultsLocation" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Location" />
+            <TableColumn fx:id="resultsCreated" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Created" />
+            <TableColumn fx:id="resultsAccount" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Account" />
          </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </children>
 </AnchorPane>
