--- a/src/main/java/headhunt/app/dialogs/loading/loading.fxml
+++ b/src/main/java/headhunt/app/dialogs/loading/loading.fxml
@@ -8,21 +8,21 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="61.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.loading.LoadingPresenter">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.loading.LoadingPresenter">
    <children>
-      <VBox layoutX="14.0" layoutY="-24.0" prefHeight="112.0" prefWidth="297.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="14.0" layoutY="-24.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="102.0" prefWidth="297.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="textLabel" text="Loading...">
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <ProgressBar fx:id="progressBar" prefHeight="20.0" prefWidth="297.0" progress="0.0">
+            <ProgressBar fx:id="progressBar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" VBox.vgrow="NEVER">
                <padding>
                   <Insets left="10.0" right="10.0" />
                </padding>
             </ProgressBar>
-            <HBox alignment="TOP_RIGHT" spacing="10.0">
+            <HBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
                <children>
                   <Button fx:id="okButton" mnemonicParsing="false" onAction="#ok" text="Ok" />
                   <Button fx:id="exitButton" mnemonicParsing="false" onAction="#exit" text="Exit" />
