--- a/src/main/java/headhunt/app/dialogs/userInfo/userinfo.fxml
+++ b/src/main/java/headhunt/app/dialogs/userInfo/userinfo.fxml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="722.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.userInfo.UserInfoPresenter">
+
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.userInfo.UserInfoPresenter">
    <children>
-      <VBox prefHeight="400.0" prefWidth="503.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="659.0" prefWidth="1051.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="399.0" prefWidth="427.0">
+            <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <children>
-                  <VBox prefHeight="399.0" prefWidth="204.0">
+                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="NEVER">
                      <children>
-                        <ImageView fx:id="image" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true">
+                        <ImageView fx:id="image" fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" VBox.vgrow="ALWAYS">
                            <image>
                               <Image url="/media/icon.png" />
                            </image>
@@ -21,19 +25,19 @@
                               <Insets left="10.0" top="10.0" />
                            </VBox.margin>
                         </ImageView>
-                        <GridPane prefHeight="260.0" prefWidth="193.0">
+                        <GridPane maxHeight="1.7976931348623157E308" vgap="3.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="78.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="126.0" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints maxHeight="38.0" minHeight="8.0" prefHeight="8.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="13.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="138.0" minHeight="8.0" prefHeight="12.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="170.0" minHeight="10.0" prefHeight="14.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="194.0" minHeight="10.0" prefHeight="14.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="217.0" minHeight="2.0" prefHeight="16.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <Label minHeight="19.0" text="Rank:" />
@@ -57,9 +61,9 @@
                         </GridPane>
                      </children>
                   </VBox>
-                  <HBox spacing="10.0">
+                  <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <VBox prefHeight="379.0" prefWidth="551.0">
+                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Label text="Websites:" />
                               <ListView fx:id="websites" prefHeight="306.0" prefWidth="242.0" />
@@ -67,18 +71,21 @@
                                  <padding>
                                     <Insets top="10.0" />
                                  </padding></Label>
-                              <TableView fx:id="activityTable">
+                              <TableView fx:id="activityTable" VBox.vgrow="ALWAYS">
                                 <columns>
-                                  <TableColumn fx:id="activityName" prefWidth="142.0" text="Name" />
-                                  <TableColumn fx:id="activityValue" prefWidth="99.0" text="Value" />
+                                  <TableColumn fx:id="activityName" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="100.0" text="Name" />
+                                  <TableColumn fx:id="activityValue" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="100.0" text="Value" />
                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
                               </TableView>
                            </children>
                         </VBox>
-                        <VBox>
+                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
                            <children>
                               <Label text="Biography:" />
-                              <TextArea fx:id="bio" wrapText="true" VBox.vgrow="ALWAYS" />
+                              <TextArea fx:id="bio" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" wrapText="true" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
                      </children>
