--- a/src/main/java/headhunt/app/views/results/results.fxml
+++ b/src/main/java/headhunt/app/views/results/results.fxml
@@ -8,12 +8,12 @@
    <children>
       <TableView fx:id="resultsTable" onMousePressed="#showResult" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columns>
-            <TableColumn fx:id="resultsRank" editable="false" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Rank" />
-            <TableColumn fx:id="resultsPoints" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Points" />
-            <TableColumn fx:id="resultsUsername" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Username" />
-            <TableColumn fx:id="resultsLocation" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Location" />
-            <TableColumn fx:id="resultsCreated" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Created" />
-            <TableColumn fx:id="resultsAccount" maxWidth="400.0" minWidth="0.0" prefWidth="100.0" text="Account" />
+            <TableColumn fx:id="resultsRank" editable="false" maxWidth="400.0" prefWidth="100.0" text="Rank" />
+            <TableColumn fx:id="resultsPoints" maxWidth="400.0" prefWidth="100.0" text="Points" />
+            <TableColumn fx:id="resultsUsername" maxWidth="400.0" prefWidth="100.0" text="Username" />
+            <TableColumn fx:id="resultsLocation" maxWidth="400.0" prefWidth="100.0" text="Location" />
+            <TableColumn fx:id="resultsCreated" maxWidth="400.0" prefWidth="100.0" text="Created" />
+            <TableColumn fx:id="resultsAccount" maxWidth="400.0" prefWidth="100.0" text="Account" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
