--- a/src/main/java/headhunt/preloader/preloader.fxml
+++ b/src/main/java/headhunt/preloader/preloader.fxml
@@ -9,16 +9,16 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="61.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.preloader.PreloaderPresenter">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.preloader.PreloaderPresenter">
    <children>
-      <VBox layoutX="14.0" layoutY="-24.0" prefHeight="112.0" prefWidth="297.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="14.0" layoutY="-24.0" prefHeight="32.0" prefWidth="114.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="textLabel" text="Loading...">
+            <Label fx:id="textLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Loading..." VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <ProgressBar fx:id="progressBar" prefHeight="20.0" prefWidth="297.0" progress="0.0">
+            <ProgressBar fx:id="progressBar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" VBox.vgrow="ALWAYS">
                <padding>
                   <Insets left="10.0" right="10.0" />
                </padding>
