--- a/src/main/java/headhunt/setup/views/finish/finish.fxml
+++ b/src/main/java/headhunt/setup/views/finish/finish.fxml
@@ -19,7 +19,7 @@
                <children>
                   <ImageView fx:id="setupImage" fitHeight="310.0" fitWidth="200.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="/media/setup.jpg" />
+                        <Image url="@/media/duke.png" />
                      </image>
                   </ImageView>
                </children>
