--- a/src/main/java/headhunt/setup/views/license/license.fxml
+++ b/src/main/java/headhunt/setup/views/license/license.fxml
@@ -42,8 +42,11 @@
                   </VBox>
                   <ImageView fitHeight="82.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="/media/setup.jpg" />
+                        <Image url="@/media/duke.png" />
                      </image>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
                   </ImageView>
                </children>
             </HBox>
