--- a/src/main/java/headhunt/setup/views/path/path.fxml
+++ b/src/main/java/headhunt/setup/views/path/path.fxml
@@ -41,8 +41,11 @@
                         </VBox>
                         <ImageView fitHeight="82.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="/media/setup.jpg" />
+                                <Image url="/media/duke.png" />
                             </image>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
                         </ImageView>
                     </children>
                 </HBox>
@@ -64,7 +67,7 @@
                   </Label>
                   <HBox alignment="CENTER_LEFT" prefHeight="13.0" prefWidth="542.0" spacing="10.0">
                      <children>
-                        <TextField editable="false" fx:id="dirField" prefHeight="26.0" prefWidth="390.0" />
+                        <TextField fx:id="dirField" editable="false" prefHeight="26.0" prefWidth="390.0" />
                         <Button fx:id="browseButton" mnemonicParsing="false" onAction="#browse" text="Browse..." />
                      </children>
                      <padding>
