--- a/src/main/java/headhunt/fx/app/dialogs/userInfo/userinfo.fxml
+++ b/src/main/java/headhunt/fx/app/dialogs/userInfo/userinfo.fxml
@@ -19,7 +19,7 @@
                      <children>
                         <ImageView fx:id="image" fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" VBox.vgrow="ALWAYS">
                            <image>
-                              <Image url="/media/icon.png" />
+                              <Image url="/media/incognito.jpg" />
                            </image>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
